# learnx

./: .gitignore  Insomnia_2024-09-12.json  README.md  db.sqlite3  pyproject.toml
api/: admin.py  models.py  serializer.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_grammarsubcategory_name.py  0002_remove_practicesection_name.py  0003_category_learn_practicesection_questions_subject_and_more.py  0003_remove_practicesection_category_and_more.py  0004_practicesection_learn.py  0005_rename_category_practicesection_category_id_and_more.py
api/templates/admin/: bulk_import.html
api/templates/admin/myapp/grammartest/: change_list.html
back_end/: settings.py  urls.py
data/: data-develop.sql  question_template.csv  question_template.json
learnx/: asgi.py  settings.py  urls.py  wsgi.py
webapp/: forms.py  urls.py  views.py
webapp/templates/webapp/: account.html  base.html  dashboard.html  home.html  index.html  login.html  register.html
webapp/templates/webapp/partials/: footer.html  header.html  sidebar.html
