[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["Matt Clifford <matthew.clifford@hfx.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.7"
djangorestframework = "^3.15.2"
markdown = "^3.6"
django-cors-headers = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
